--- a/MVCUploadFileAngular/Scripts/app/file/eebFilesUploader.html
+++ b/MVCUploadFileAngular/Scripts/app/file/eebFilesUploader.html
@@ -1,18 +1,36 @@
-﻿<div>
+﻿<div data-ng-init="vm.init()">
+    <div class="table table-condensed table-striped" data-ng-show="vm.fileList.length > 0">
+        <span><strong>Files uploaded: </strong></span>
+        <table>
+            <thead>
+                <tr>
+                    <td>Name</td>
+                    <td>Path</td>
+                    <td>Size</td>
+                    <td>Created Date</td>
+                    <td>Modified Date</td>
+                    <td></td>
+                </tr>
+            </thead>
+            <tbody>
+                <tr data-ng-repeat="file in vm.fileList">
+                    <td>{{file.name}}</td>
+                    <td>{{file.path}}</td>
+                    <td>{{file.size}}</td>
+                    <td>{{file.createdDate}}</td>
+                    <td>{{file.modifiedDate}}</td>
+                    <td><span class="glyphicon glyphicon-remove" data-ng-click="vm.deleteFile(file)"></span></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-    <form name="addFileForm" role="form" enctype="multipart/form-data">
+    <form id="addFileForm" name="addFileForm" role="form" enctype="multipart/form-data">
         <div class="form-group">
-            <label for="newPhotos">select and upload new photos</label>
-            <input type="file" id="files" class="uploadFile" accept="*" eeb-files="vm.files" has-files="vm.hasFiles" multiple/>
+            <label for="newPhotos">Select and upload new files: </label>
+            <input type="file" id="files" class="uploadFile" accept="*" eeb-files="vm.files" has-files="vm.hasFiles" multiple required />
         </div>
 
-        <div class="form-group">
-            <ul class="list-inline">
-                <li><strong>files:</strong></li>
-                <li ng-repeat="file in files">{{file.name}}</li>
-            </ul>
-
-            <input class="btn btn-primary" type="button" ng-click="vm.upload()" value="upload">
-        </div>
+        <input class="btn btn-primary" type="button" data-ng-click="vm.upload()" value="Upload">
     </form>
 </div>
